BoLibDll/BoLibGetValues.h

		    
DLLEXPORT int			addCredit(int pennies);
DLLEXPORT unsigned char hopper();
DLLEXPORT unsigned char printer();
DLLEXPORT unsigned char getTerminalFormat();
DLLEXPORT unsigned int	getUtilsAdd2CreditValue();
DLLEXPORT unsigned long getLastGameModel(int index);
DLLEXPORT unsigned long getReserveCredits();
DLLEXPORT bool			isBackOfficeAvilable();