1427/BoLibNative/NativeBoLib.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte hopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte printer();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getLiveElement(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getDefaultElement(int region, int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getTerminalFormat();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getUtilsAdd2CreditValue();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong getLastGameModel(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong getReserveCredits();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool isBackOfficeAvilable();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getTitoStateValue();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool canPerformHandPay();
        
        /************************************************************************/
        /*							Set methods                                 */
        /************************************************************************/
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void clearBankAndCredit();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setLocalMasterVolume(uint val);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setLampStatus(byte offset, byte mask, byte state);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setHopperFloatLevel(byte hopper, uint value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setRequestEmptyLeftHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setRequestEmptyRightHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void addCredit(int pennies);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int clearError();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setCriticalError(int code);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void transferBankToCredit();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void clearShortTermMeters();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setHopperDivertLevel(byte hopper, uint value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void shellSendRecycleNote();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setPrinterType(byte type);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setRecyclerChannel(byte value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setBnvType(byte value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setRebootRequired();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setUtilsAdd2CreditValue(uint value);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setRequestUtilsAdd2Credit();

        /************************************************************************/
        /* General methods                                                      */
        /************************************************************************/
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void enableNoteValidator();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void disableNoteValidator();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void printTestTicket();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getPrinterTicketState();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getBnvStringType(byte bnv);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useMoneyInType(int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useMoneyOutType(int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useRefillType(int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useVtpMeter(int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useWonMeter(int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useHandPayMeter(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int useTicketsMeter(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong useStakeInMeter(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string GetUniquePcbID(byte type);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setFileAction();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void clearFileAction();

        [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
        public unsafe static extern void setTerminalType(byte type);

        /************************************************************************/
        /* Hand Pay methods                                                     */
        /************************************************************************/
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setHandPayThreshold(uint value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getHandPayThreshold();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern bool getHandPayActive();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void sendHandPayToServer(uint paidOut, uint release);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void addHandPayToEDC(uint value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern bool performHandPay();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void cancelHandPay();


        /************************************************************************/
        /* TITO methods                                                         */
        /************************************************************************/
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern bool getTitoEnabledState();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getTitoHost();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getTitoProcessInState();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getTitoTicketPresented();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void setTitoState(int state);
    }
}
